[package]
name = "fzero"
version = "0.1.0"
authors = ["Brandon Falk <bfalk@gamozolabs.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

